--- a/assets/css/students.css
+++ b/assets/css/students.css
@@ -2,7 +2,7 @@
 
 section#fotos{
   color: rgba(252, 193, 17, 1);
-  z-index: 1000;
+  z-index: 100;
   position: absolute;
   top:100px;
   text-align: center;
@@ -34,12 +34,14 @@ ul {
 }
 
 span.nombre {
-  display: block;
+  /*display: block;*/
   margin: 0;
-  margin-top: -50%;
+  /*margin-top: -50%;*/
   width: 400px;
   text-align: center;
-  font-size: 24px;
+  margin-left: -50%;
+  margin-top: 50%;
+  font-size: 1rem;
   color:rgba(252, 193, 17, 1);
   font-size: 40px;
 	opacity: 0;
@@ -49,7 +51,7 @@ span.nombre {
   -webkit-text-stroke-color:rgba(252, 193, 17, 1);
   position:absolute;
 	z-index: 1000;
-	transition: 0.4s;
+	transition: 0.6s;
 }
 
 figure:hover span.nombre {
@@ -66,7 +68,7 @@ img.image {
   padding: 0;
   margin: 0;
   position: relative;
-	transition: 0.4s;
+	transition: 0.6s ease-in-out;
 
 }
 
