--- a/assets/css/students.css
+++ b/assets/css/students.css
@@ -3,11 +3,13 @@
 section#fotos{
   color: rgba(252, 193, 17, 1);
   z-index: 100;
-  position: absolute;
+  position: relative;
   top:100px;
   text-align: center;
   font-family: "Raleway",sans-serif;
   width:1349px;
+  min-height: 100%;
+  overflow: auto;
 }
 
 div.titulo {
@@ -100,6 +102,12 @@ div.coder:hover {
   transition: background-color ease 4s;
 }
 
-div, ul, figure {
+div#contenedor, ul, figure {
   display: inline-block;
+}
+
+div#contenedor, ul#lista {
+  line-height: 0;
+  min-height: 100%;
+  position: relative;
 }
