--- a/assets/css/students.css
+++ b/assets/css/students.css
@@ -1,10 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url("https://fonts.googleapis.com/css?family=Raleway");
 
 section#fotos{
   color: rgba(252, 193, 17, 1);
   z-index: 100;
   position: relative;
-  top:100px;
+  top:60px;
   text-align: center;
   font-family: "Raleway",sans-serif;
   width:1349px;
@@ -53,7 +53,7 @@ span.nombre {
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color:rgba(252, 193, 17, 1);
   position:absolute;
-	z-index: 1000;
+	z-index: 2000;
 	transition: 0.6s;
 }
 
